<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9F882C1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="59dp"
        android:fontFamily="@font/agbalumo"
        android:text="@string/the_music_playlist_app"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#161516"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/editTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="363dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/castoro_titling"
        android:inputType="text"
        android:text="@string/song_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="363dp"
        android:layout_height="62dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/castoro_titling"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/artist_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editRating"
        android:layout_width="363dp"
        android:layout_height="62dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:fontFamily="@font/castoro_titling"
        android:inputType="text"
        android:text="@string/rating"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="363dp"
        android:layout_height="62dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="65dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/castoro_titling"
        android:inputType="text"
        android:text="@string/comment"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="133dp"
        android:layout_height="64dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="65dp"
        android:backgroundTint="#E9E2077D"
        android:text="@string/add_to_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editComment" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="133dp"
        android:layout_height="64dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="34dp"
        android:backgroundTint="#E9E2077D"
        android:text="@string/screen_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editComment" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="133dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="83dp"
        android:backgroundTint="#E9E2077D"
        android:text="@string/exit_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />


</androidx.constraintlayout.widget.ConstraintLayout>