<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9F882C1"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="65dp"
        android:fontFamily="@font/agbalumo"
        android:text="@string/the_music_playlist_app1"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#161516"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/btnShowAll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnShowAll"
        android:layout_width="215dp"
        android:layout_height="72dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="98dp"
        android:backgroundTint="#E9E2077D"
        android:text="@string/display_list_of_songs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="215dp"
        android:layout_height="72dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="98dp"
        android:backgroundTint="#E9E2077D"
        android:text="@string/main_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShowAll" />

    <Button
        android:id="@+id/btnShowFiltered"
        android:layout_width="215dp"
        android:layout_height="72dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="302dp"
        android:backgroundTint="#E9E2077D"
        android:text="@string/calculate_average_rating_of_songs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReturn"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>